sfdx-source/force-app/main/default/objects/compliancequest__SQX_Controlled_Document__c/compliancequest__SQX_Controlled_Document__c.object-meta.xml
<CustomObject>
    <description>CQ Controlled Doc</description>
    <label>Controlled Document</label>
    <nameField>
        <label>Document Number [Rev]</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controlled Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>