sfdx-source/force-app/main/default/objects/compliancequest__SQX_Controlled_Document__c/fields/CQ_MS_Legacy_Document__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_Legacy_Document__c</fullName>
    <description>Custom Legacy Document Text field for controlled documents. 
        Custom Field for any Legacy Document for the Controlled Document.</description>
    <label>Legacy Document</label>
    <length>40</length>
    <type>Text</type>
</CustomField>