sfdx-source/force-app/main/default/objects/compliancequest__SQX_Controlled_Document__c/fields/CQ_MS_System_Standard__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_System_Standard__c</fullName>
    <description>Custom System Standard picklist field for controlled documents.
        Custom Field which Describes the Standard of the Controlled Document.
    </description>
    <label>System Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CQ_MS_System_Standard</valueSetName>
    </valueSet>
</CustomField>