sfdx-source/force-app/main/default/objects/compliancequest__SQX_Controlled_Document__c/fields/CQ_MS_Watermark__c.field-meta.xml
<CustomField>
    <fullName>CQ_MS_Watermark__c</fullName>
    <description>Custom watermark text field for controlled documents.
If document status is current, watermark must be removed.</description>
    <formula>IF(ISPICKVAL(compliancequest__Document_Status__c, &apos;Current&apos;),&apos;&apos;,TEXT(compliancequest__Document_Status__c) )</formula>
    <inlineHelpText>Custom watermark text</inlineHelpText>
    <label>Watermark</label>
    <type>Text</type>
</CustomField>